[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/spritesItens.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/invSlot.gd" type="Script" id=2]
[ext_resource path="res://Sprites/verticaloff.png" type="Texture" id=3]
[ext_resource path="res://Sprites/horizontaloff.png" type="Texture" id=4]
[ext_resource path="res://Sprites/invslot.png" type="Texture" id=5]

[node name="Invetory Slot" type="TextureButton"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" parent="." instance=ExtResource( 1 )]

[node name="caminhoCima" type="TextureButton" parent="."]
visible = false
margin_left = 5.0
margin_right = 11.0
margin_bottom = 3.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caminhoBaixo" type="TextureButton" parent="."]
visible = false
margin_left = 5.0
margin_top = 13.0
margin_right = 11.0
margin_bottom = 16.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caminhoEsquerda" type="TextureButton" parent="."]
visible = false
margin_top = 5.0
margin_right = 3.0
margin_bottom = 11.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caminhoDireita" type="TextureButton" parent="."]
visible = false
margin_left = 13.0
margin_top = 5.0
margin_right = 16.0
margin_bottom = 11.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="." to="." method="_on_Invetory_Slot_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_Invetory_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Invetory_Slot_mouse_exited"]
[connection signal="button_up" from="caminhoCima" to="." method="_on_caminhoCima_button_up"]
[connection signal="mouse_entered" from="caminhoCima" to="." method="_on_caminhoCima_mouse_entered"]
[connection signal="mouse_exited" from="caminhoCima" to="." method="_on_caminhoCima_mouse_exited"]
[connection signal="button_up" from="caminhoBaixo" to="." method="_on_caminhoBaixo_button_up"]
[connection signal="mouse_entered" from="caminhoBaixo" to="." method="_on_caminhoBaixo_mouse_entered"]
[connection signal="mouse_exited" from="caminhoBaixo" to="." method="_on_caminhoBaixo_mouse_exited"]
[connection signal="button_up" from="caminhoEsquerda" to="." method="_on_caminhoEsquerda_button_up"]
[connection signal="mouse_entered" from="caminhoEsquerda" to="." method="_on_caminhoEsquerda_mouse_entered"]
[connection signal="mouse_exited" from="caminhoEsquerda" to="." method="_on_caminhoEsquerda_mouse_exited"]
[connection signal="button_up" from="caminhoDireita" to="." method="_on_caminhoDireita_button_up"]
[connection signal="mouse_entered" from="caminhoDireita" to="." method="_on_caminhoDireita_mouse_entered"]
[connection signal="mouse_exited" from="caminhoDireita" to="." method="_on_caminhoDireita_mouse_exited"]
